--- a/Segundo_projeto_aula3.ipynb
+++ b/Segundo_projeto_aula3.ipynb
@@ -14,6 +14,16 @@
     }
   },
   "cells": [
+        {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "[View in Colaboratory](https://colab.research.google.com/github/marcosrpetry/keras-tensorflow2/blob/master/Segundo_projeto_aula3.ipynb)"
+      ]
+    },
     {
       "metadata": {
         "id": "sNc3NouWYrN7",
